--- a/UICollectionView/Scene/Base.lproj/LaunchScreen.storyboard
+++ b/UICollectionView/Scene/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23077.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23068.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,11 +13,45 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                    <view key="view" contentMode="scaleToFill" id="VVl-ip-e04">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_kuruma" translatesAutoresizingMaskIntoConstraints="NO" id="oBl-xM-EGd">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lc3-F0-G39">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_naruto" translatesAutoresizingMaskIntoConstraints="NO" id="hlb-cs-jW6">
+                                        <rect key="frame" x="98.333333333333329" y="278.66666666666663" width="196.33333333333337" height="294.66666666666663"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="hlb-cs-jW6" secondAttribute="height" multiplier="1:1.5" id="QAp-6y-r9f"/>
+                                            <constraint firstAttribute="width" secondItem="hlb-cs-jW6" secondAttribute="height" multiplier="1:1.5" id="mJL-2O-j0C"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="safeArea" id="kMd-o9-AlQ"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="hlb-cs-jW6" firstAttribute="width" secondItem="Lc3-F0-G39" secondAttribute="width" multiplier="0.5" id="90E-4H-N8R"/>
+                                    <constraint firstItem="hlb-cs-jW6" firstAttribute="centerX" secondItem="Lc3-F0-G39" secondAttribute="centerX" id="Vzn-9A-XKB"/>
+                                    <constraint firstItem="hlb-cs-jW6" firstAttribute="centerY" secondItem="Lc3-F0-G39" secondAttribute="centerY" id="vmG-5A-xTD"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="uGk-FZ-OV6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oBl-xM-EGd" firstAttribute="leading" secondItem="uGk-FZ-OV6" secondAttribute="leading" id="A4N-Vr-IAy"/>
+                            <constraint firstItem="uGk-FZ-OV6" firstAttribute="trailing" secondItem="oBl-xM-EGd" secondAttribute="trailing" id="OOV-dC-8mK"/>
+                            <constraint firstAttribute="bottom" secondItem="oBl-xM-EGd" secondAttribute="bottom" id="QnL-md-cRs"/>
+                            <constraint firstAttribute="trailing" secondItem="Lc3-F0-G39" secondAttribute="trailing" id="V9f-ye-BJS"/>
+                            <constraint firstAttribute="bottom" secondItem="Lc3-F0-G39" secondAttribute="bottom" id="gQI-sg-aZF"/>
+                            <constraint firstItem="oBl-xM-EGd" firstAttribute="top" secondItem="VVl-ip-e04" secondAttribute="top" id="lh5-ZM-xIB"/>
+                            <constraint firstItem="Lc3-F0-G39" firstAttribute="leading" secondItem="uGk-FZ-OV6" secondAttribute="leading" id="pvS-8j-W7w"/>
+                            <constraint firstItem="Lc3-F0-G39" firstAttribute="top" secondItem="VVl-ip-e04" secondAttribute="top" id="q6A-lE-vNU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +59,11 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_kuruma" width="450" height="817"/>
+        <image name="ic_naruto" width="788" height="1204"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
