--- a/UICollectionView/Scene/Home /View/CharacterCell/CharacterCell.xib
+++ b/UICollectionView/Scene/Home /View/CharacterCell/CharacterCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CharacterCell" customModule="UICollectionView" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CharacterCell" id="gTV-IL-0wX" customClass="CharacterCell" customModule="UICollectionView" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="256" height="273"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -60,6 +60,10 @@
                 <constraint firstAttribute="trailing" secondItem="vn8-JZ-Iwg" secondAttribute="trailing" id="sON-4O-z3M"/>
             </constraints>
             <size key="customSize" width="256" height="273"/>
+            <connections>
+                <outlet property="imageView" destination="tk9-89-7GQ" id="WxL-hK-6GO"/>
+                <outlet property="lblTitle" destination="GuX-mD-Fc5" id="H3w-Yt-fRg"/>
+            </connections>
             <point key="canvasLocation" x="277.86259541984731" y="98.239436619718319"/>
         </collectionViewCell>
     </objects>
